add color and vertex

--- a/renderer.html
+++ b/renderer.html
@@ -30,6 +30,7 @@
     <script src="script/SwapChain.js"></script>
     <script src="script/Math.js"></script>
     <script src="script/Camera.js"></script>
+    <script src="script/Vertex.js"></script>
   <script>
       var vectortest = new Vector3(0,0,0);
       var vectortest2 = new Vector3(1,0,0);
