--- a/renderer.html
+++ b/renderer.html
@@ -36,7 +36,7 @@
     
   <script>
       var camera = new Camera(vue._data.canvasWidth/ vue._data.canvasHeight);
-      var model = new Model("src/testFile");
+      var model = new Model("src/tesetobj.obj");
       var verties = [new Vertex(-0.5,0.5,-0.5,1,0,0),
                      new Vertex(0.5,0.5,-0.5,1,0,0),
                      new Vertex(-0.5,-0.5,-0.5,1,0,0),
